# trading-dashboard

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  final_validation_report.md  generate_secret_key.py  health_check_report.md  healthcheck.sh  sharkex_docs.html  test_production.sh
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml  requirements.txt  reset_password.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_migration.py
backend/app/: celery_app.py  config.py  deps.py  main.py
backend/app/api/: __init__.py  api_keys.py  auth.py  backtest.py  dashboard.py  risk.py  strategies.py  trading.py  ws_endpoints.py
backend/app/brokers/: __init__.py  shark_client.py  shark_websocket.py
backend/app/core/: auto_recovery.py  duplicate_order_guard.py  market_data_pipeline.py  metrics.py  order_manager.py  risk_manager.py  security.py  strategy_validator.py
backend/app/db/: base.py
backend/app/engine/: indicators.py  strategy_engine.py
backend/app/models/: __init__.py  api_key.py  log.py  performance.py  position.py  risk_setting.py  strategy.py  trade.py  user.py
backend/app/schemas/: api_key.py  auth.py  backtest.py  order.py  risk.py  strategy_schema.json
backend/app/tasks/: __init__.py  backtest.py  notifications.py  reports.py  risk_monitor.py
backend/app/websocket/: __init__.py  manager.py
backend/tests/: conftest.py  mock_shark.py  test_api_keys.py  test_auth.py  test_celery.py  test_celery_tasks.py  test_config.py  test_e2e.py  test_e2e_debug.py  test_health.py  test_market_pipeline.py  test_migrations.py  test_models.py  test_order_manager.py  test_risk_manager.py  test_shark_api.py  test_shark_client.py  test_strategies.py  test_strategy_engine.py  test_websocket.py
frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: setup.ts  (+2 more)
nginx/: nginx.conf
prometheus/: prometheus.yml
(+38 files in other folders)
