[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-dashboard-backend"
version = "0.1.0"
description = "Backend API for the Trading Dashboard – FastAPI + Celery + PostgreSQL"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-env>=1.1.5",
    "httpx>=0.28.1",
    "anyio>=4.7.0",
    "freezegun>=1.5.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# Markers
markers = [
    "integration: marks tests that require live services (DB, Redis, Celery workers). Skipped unless --run-integration is passed.",
    "unit: fast tests with no external dependencies (default).",
    "slow: tests that take more than 2 seconds.",
    "anyio: async tests using AnyIO (auto-detected).",
]

# Coverage
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/celery_app.py"]

[tool.coverage.report]
fail_under = 0
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]  # line length handled by formatter